[chromium] Media player controls do not fade out. https://bugs.webkit.org/show_bug.cgi?id=64837

Media controls were not fading out when the mouse leaves the video
due to underlying changes in webkit media controls.
Fix was to copy missing code from MediaControlRootElement to
MediaControlRootElementChromium.

Reviewed by Dimitri Glazkov.

* html/shadow/MediaControlRootElementChromium.cpp:
(WebCore::MediaControlRootElementChromium::MediaControlRootElementChromium):
(WebCore::MediaControlRootElementChromium::playbackProgressed):
(WebCore::MediaControlRootElementChromium::containsRelatedTarget):
(WebCore::MediaControlRootElementChromium::defaultEventHandler):
* html/shadow/MediaControlRootElementChromium.h:


Canonical link: https://commits.webkit.org/80579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91337 268f45cc-cd09-0410-ab3c-d52691b4dbfc